--- a/bin/espgeigerhw/manifest.json
+++ b/bin/espgeigerhw/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "ESPGeiger-HW v0.3.8",
+  "name": "ESPGeiger-HW v0.3.9",
+  "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP8266",
