--- a/bin/mightyohm/oled/manifest.json
+++ b/bin/mightyohm/oled/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "ESPGeiger OLED MightyOhm v0.3.8",
+  "name": "ESPGeiger OLED MightyOhm v0.3.9",
+  "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32",
